# packaging-tutorial

./: .gitignore  README.md  pyproject.toml
src/example-package-scott-baldwin/: main.py
tests/: test.py
