[tool.poetry]
name = "example-package-scott-baldwin"
version = "0.1.1"
description = "packaging tutorial"
authors = ["Scott-Baldwin <superscottyb@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "example-package-scott-baldwin", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project.urls]
Homepage = "https://github.com/Scott-Baldwin/packaging-tutorial"
